add_executable(dlearn
               addlhs.f90
               addrhs.f90
               back.f90
               bc.f90
               bkcb.f90
               bkck.f90
               bkckd.f90
               bkcrsf.f90
               bkcshg.f90
               bkcshl.f90
               bkcstr.f90
               bkcsuf.f90
               bkct1.f90
               bkct2.f90
               bkct3.f90
               bkct4.f90
               bkct5.f90
               brickc.f90
               btdb.f90
               chrint.f90
               clear.f90
               close.f90
               coldot.f90
               colht.f90
               compbc.f90
               contm.f90
               contma.f90
               coord.f90
               corrct.f90
               dctnry.f90
               dhist.f90
               diag.f90
               dlearn.f90
               driver.f90
               dynpts.f90
               echo.f90
               elcard.f90
               elemnt.f90
               elmlib.f90
               eqset.f90
               factor.f90
               formlm.f90
               genel.f90
               genel1.f90
               geneld.f90
               geneli.f90
               genfl.f90
               genfl1.f90
               gensh.f90
               gensh1.f90
               gensh2.f90
               gensh3.f90
               hplot.f90
               iclear.f90
               igen.f90
               imove.f90
               input.f90
               intchr.f90
               interp.f90
               iterup.f90
               lfac.f90
               load.f90
               local.f90
               lout.f90
               ltimef.f90
               main.f90
               matadd.f90
               meansh.f90
               memory_size.inc
               minmax.f90
               move.f90
               mpoint.f90
               multab.f90
               pivots.f90
               predct.f90
               princ.f90
               printd.f90
               printf.f90
               printp.f90
               prntel.f90
               prop2d.f90
               prop3d.f90
               prtdc.f90
               prtdc1.f90
               prts2d.f90
               prts3d.f90
               qdcb.f90
               qdck.f90
               qdckd.f90
               qdcrsf.f90
               qdcshg.f90
               qdcshl.f90
               qdcstr.f90
               qdcsuf.f90
               qdct1.f90
               qdct2.f90
               qdct3.f90
               qdct4.f90
               qdct5.f90
               qtsk3.f90
               quadc.f90
               rcdot.f90
               rowdot.f90
               rsin.f90
               rsout.f90
               secnds.f90
               serror.f90
               setupd.f90
               shist.f90
               smult.f90
               statin.f90
               stored.f90
               sufdet.f90
               syscpu.f90
               timcon.f90
               timing.f90
               timlog.f90
               trusb.f90
               trushg.f90
               trushl.f90
               trusk.f90
               truskd.f90
               truspr.f90
               truspt.f90
               truss.f90
               trust1.f90
               trust2.f90
               trust3.f90
               trust4.f90
               trust5.f90
               trustr.f90
               tseq.f90
               tseqin.f90
               values.f90
               ztest.f90
               )
